# LCLSGeom

./: .gitignore  LICENSE  README.md  convert.py  pyproject.toml  requirements.txt  setup.py
LCLSGeom/: calib.py  converter.py  detector.py  frame.py  geometry.py  header.py  manager.py  swap_geom.py  utils.py
LCLSGeom/common/: calib.py  detector.py  geometry.py  header.py
LCLSGeom/psana/: converter.py  detector.py
LCLSGeom/psana2/: converter.py
LCLSGeom/templates/: geometry-def-epix10kaQuad0.data  geometry-def-epix10kaQuad1.data  geometry-def-epix10kaQuad2.data  geometry-def-jungfrau4M.data  geometry-def-rayonix.data
LCLSGeom/templates/Jungfrau16M/: 0-end.data
LCLSGeom/templates/Jungfrau4M/: 0-end.data
LCLSGeom/templates/Rayonix/: 0-end.data
LCLSGeom/templates/ePix10k2M/: 0-end.data
src/LCLSGeom/: calib.py  convert.py  converter.py  detector.py  frame.py  manager.py  push_to_database.py  swap_geom.py  utils.py
src/LCLSGeom/common/: geometry.py  utils.py
src/LCLSGeom/psana/: converter.py
src/LCLSGeom/psana2/: converter.py  detector.py
src/LCLSGeom/templates/: geometry-def-epix10k2M.data  geometry-def-epix10kaQuad3.data  geometry-def-jungfrau16M.data
src/LCLSGeom/templates/Jungfrau05M/: 0-end.data
src/LCLSGeom/templates/Jungfrau1M/: 0-end.data
tests/: test_swap_geom.py
tests/data/geom/: ePix10k2M_0-end.geom
